--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -360,7 +360,7 @@
                                   </ul>
                                 </div>
                              </li></ul></div></li>
-                        <li>Employee does not live on a reserve and you (employer or payer) are resident on a reserve
+                        <li>Worker does not live on a reserve and you (employer or payer) are resident on a reserve
                           <div class="wb-fieldflow-sub"  data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                             <div class="wb-fieldflow-header">
                               <div class="brdr-tp gc-font-2019">
@@ -375,7 +375,7 @@
                             </ul>
                           </div>
                         </li>
-		<li>Employee does not live on a reserve and you are not resident on a reserve but your employee is required to 
+		<li>Worker does not live on a reserve and you (employer or payer) are not resident on a reserve but the worker is required to 
 perform duties on a reserve
                           <div class="wb-fieldflow-sub"  data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                             <div class="wb-fieldflow-header">
