--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -307,7 +307,7 @@
                           <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
-                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
+                       <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
 
                       </div>
                       <ul>
@@ -1090,7 +1090,7 @@ Indian Act</h3>
 	</div></section>
 
 
-<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
+<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer or payer is resident on a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
