--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -450,12 +450,32 @@ Indian Act</h3>
 <hr>
   <h4>Withholding obligations </h4>
         <div data-ajax-replace="#ajax-t4a-withhold"></div>
- <div data-ajax-replace="#ajax-howcalc"></div>     
-  <h4>Reporting obligations - T4A slip </h4>
-		  <div data-ajax-replace="#ajax-t4a-report"></div>
- <div data-ajax-replace="#ajax-howreport"></div>     
   
+<h4>Reporting obligations - T4A slip </h4>
+ <div data-ajax-replace="#ajax-t4a-report"></div>
+  
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
  
+            </div>
+
+   <div id="ajax-2c" class="alert alert-info hidden">
+              <h3><small>Your result </small><br>
+                Employee lives on a reserve and you are resident on a reserve</h3>
+               <div data-ajax-replace="#ajax-ex-emp"></div>
+<hr>
+  <h4>Withholding obligations </h4>
+        <div data-ajax-replace="#ajax-t4-withhold"></div>
+  
+<h4>Reporting obligations - T4 slip </h4>
+ <div data-ajax-replace="#ajax-t4-report"></div>
+  
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
             </div>
 
             <div id="ajax-3yesa" class="alert alert-info hidden">
@@ -505,11 +525,7 @@ Indian Act</h3>
               <div data-ajax-replace="#ajax-resultnonres3"></div>
             </div>
 
-            <div id="ajax-2c" class="alert alert-info hidden">
-              <h3><small>Your result </small><br>
-                Employee lives on a reserve and you are resident on a reserve</h3>
-               <div data-ajax-replace="#ajax-ex-emp"></div>
-            </div>
+         
           </div>
         </div>
       </details>
@@ -557,7 +573,7 @@ Indian Act</h3>
  <div id="ajax-ex-emp">
 <p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
-<ul class="list-unstyled cnjnctn-type-and">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
