--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -571,11 +571,11 @@ Indian Act</h3>
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
  <div id="ajax-ex-emp">
-<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>The First Nations worker's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 
 <p> <a href="#ajax-example2a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
