--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -261,7 +261,7 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether the income is taxable or exempt.</p>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="centred-popup" class="wb-lbx" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
 
 
 
@@ -553,8 +553,8 @@ Indian Act</h3>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 
-<p> <a href="#ajax-example2a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example2b" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
+<p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 </div>
 
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
@@ -687,11 +687,9 @@ Indian Act</h3>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example3a" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example3b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 
-
-<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 
 </details>
 
@@ -707,8 +705,8 @@ Indian Act</h3>
 </li>
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
-<p> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1bpro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button"> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
 
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
@@ -726,10 +724,9 @@ Indian Act</h3>
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example4a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example4b" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 </details>
 </li>
 
@@ -741,10 +738,9 @@ Indian Act</h3>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example1a" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1b" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+<p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/file/t4slip.html#indian1">T4 slip - Information for employers</a> </p>
 </details>
 
 <details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve</summary>
@@ -753,8 +749,8 @@ Indian Act</h3>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 
-<p> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1bpro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 
 
 </details>
@@ -1087,7 +1083,7 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
 	</div></section>
 
-<section id="ajax-def2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Indians</h2>
+<section id="ajax-def2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Indians</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
 	</div></section>
@@ -1098,68 +1094,68 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
 	</div></section>
 
-<section id="ajax-def4" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">On a reserve</h2>
+<section id="ajax-def4" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">On a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
 	</div></section>
 
-<section id="ajax-def5" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Social, cultural, educational or economic development</h2>
+<section id="ajax-def5" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Social, cultural, educational or economic development</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def5"></div>
 	</div></section>
 
 
-	<section id="ajax-example1a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Examples where exempt</h2>
+	<section id="ajax-example1a" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 1 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1a"></div>
 	</div></section>
 
-	<section id="ajax-example1b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where not exempt</h2>
+	<section id="ajax-example1b" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 1 - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1b"></div>
 	</div></section>
 
-<section id="ajax-example1apro" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Examples where exempt</h2>
+<section id="ajax-example1apro" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><h2 class="modal-title">Guideline 1 - Proration rule - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1apro"></div>
 	</div></section>
 
-<section id="ajax-example1bpro" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Example where not exempt</h2>
+<section id="ajax-example1bpro" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1bpro"></div>
 	</div></section>
 
-<section id="ajax-example2a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where exempt</h2>
+<section id="ajax-example2a" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example2a"></div>
 	</div></section>
 
-	<section id="ajax-example2b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where not exempt</h2>
+	<section id="ajax-example2b" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 2 - Examples where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example2b"></div>
 	</div></section>
 
-<section id="ajax-example3a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where exempt</h2>
+<section id="ajax-example3a" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example3a"></div>
 	</div></section>
 
-	<section id="ajax-example3b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where not exempt</h2>
+	<section id="ajax-example3b" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 3 - Example where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example3b"></div>
 	</div></section>
 
-<section id="ajax-example4a" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where exempt</h2>
+<section id="ajax-example4a" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4a"></div>
 	</div></section>
 
-	<section id="ajax-example4b" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where not exempt</h2>
+	<section id="ajax-example4b" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 4 - Examples where not exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4b"></div>
 	</div></section>
 
-<section id="ajax-example-emp-related" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
+<section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
 	</div></section>
