--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -319,7 +319,7 @@
                                 <p class="gc-font-2019 mrgn-tp-md">Where the you are not resident on a reserve, you need to consider the percentage of the work performed by the worker of their employment duties on a reserve</p>
                               </div>
                               <p class="wb-fieldflow-label">What is the situation?</p>
-                              <p>Add info here</p>
+                               <p><a href="#how-prorate" aria-controls="how-prorate" class="overlay-lnk" role="button">How to determine the percentage of duties related to employment on a reserve&nbsp;<span class="far fa-question-circle"></span></a></p>
                             </div>
                             <ul>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3yesa", "live": true}'>Worker performs more than 50% of their employment duties on a reserve</li>
@@ -334,9 +334,9 @@
                               <p class="wb-fieldflow-label">What is the situation of the employee?</p>
                             </div>
                             <ul>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Non-resident, including a commuter</li>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Part-year resident </li>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>Deemed resident or sojourner </li>
+                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Option 1</li>
+                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Option 2 </li>
+                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>Option 3 </li>
                             </ul>
                           </div>
                         </li>
@@ -428,15 +428,16 @@ Indian Act</h3>
 
    <div id="ajax-2c" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
-                Employee lives on a reserve and you are resident on a reserve</h3>
+                Worker lives on a reserve and you (employer or payer) are resident on a reserve</h3>
                <div data-ajax-replace="#ajax-ex-emp"></div>
 <hr>
-  <h4>Withholding obligations </h4>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
   <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
-  
-<h4>Reporting obligations - T4 slip </h4>
+   </details>
+ <details><summary>Reporting obligations - T4 slip</summary>
  <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
-  
+   </details>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
 <li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
@@ -574,6 +575,7 @@ Indian Act</h3>
 </li>
 <li>	  
 <h3 id="h_3">Determine the percentage of duties related to employment on a reserve</h3>
+ <div id="ajax-how-prorate">
 <p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
@@ -661,7 +663,7 @@ Indian Act</h3>
                   </ul>
 </details>
 </details>
-
+</div>
 <h4 id="h_3_1">Residency situation</h4>
   
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1076,6 +1078,10 @@ Indian Act</h3>
 	<div data-ajax-replace="#ajax-reg"></div>
 	</div></section>
 
+<section id="how-prorate" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine the percentage of duties related to employment on a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-how-prorate"></div>
+	</div></section>
 
 <section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer or payer is resident on a reserve</h2>
 	</header>	<div class="modal-body">		
