--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -304,7 +304,7 @@
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                       <div class="wb-fieldflow-header">
                         <div class="brdr-tp">
-                          <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
+                          <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the worker's or your (employer or payer) residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the situation?</p>
                        <p>Learn more: <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> and <a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></p>
@@ -316,7 +316,7 @@
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                             <div class="wb-fieldflow-header">
                               <div class="brdr-tp">
-                                <p class="gc-font-2019 mrgn-tp-md">Where the you are not resident on a reserve, you need to consider the percentage of the work performed by the worker of their employment duties on a reserve</p>
+                                <p class="gc-font-2019 mrgn-tp-md">Where you are not resident on a reserve, you need to consider the percentage of the work performed by the worker of their employment duties on a reserve</p>
                               </div>
                               <p class="wb-fieldflow-label">What is the situation?</p>
                                <p><a href="#how-prorate" aria-controls="how-prorate" class="overlay-lnk" role="button">How to determine the percentage of duties related to employment on a reserve&nbsp;<span class="far fa-question-circle"></span></a></p>
@@ -553,7 +553,7 @@ Indian Act</h3>
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
-
+<h5>Examples</h5>
 <p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 </div>
@@ -583,7 +583,7 @@ Indian Act</h3>
 <li class="cnjnctn-col">The extent to which the duty of employment was performed on a reserve</li>
 </ul>
 
-<details><summary>How to <strong>calculate the percentage</strong> of duties related to employment performed on and off a reserve</summary>
+<h4>How to <strong>calculate the percentage</strong> of duties related to employment performed on and off a reserve</h4>
 
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 
@@ -662,7 +662,6 @@ Indian Act</h3>
 					
                   </ul>
 </details>
-</details>
 </div>
 <h4 id="h_3_1">Residency situation</h4>
   
@@ -688,7 +687,7 @@ Indian Act</h3>
 </ul>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
-
+<h5>Examples</h5>
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 
@@ -707,6 +706,7 @@ Indian Act</h3>
 </li>
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
+<h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button"> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
@@ -725,7 +725,7 @@ Indian Act</h3>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
 </ul>
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
-
+<h5>Examples</h5>
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 
@@ -739,7 +739,7 @@ Indian Act</h3>
 <p>The status Indian individual's (status confirmed in step 1) income is exempt from income tax under section 87 of the Indian Act if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
-
+<h5>Examples</h5>
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 
@@ -750,7 +750,7 @@ Indian Act</h3>
 <p>The status Indian individual's (status confirmed in step 1) income is partly-exempt from income tax under section 87 of the Indian Act. The exemption may be prorated only to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
-
+<h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 
