--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -449,12 +449,13 @@ Indian Act</h3>
                 Worker performs more than 50% of their employment duties on a reserve</h3>
 	<div data-ajax-replace="#ajax-ex-emp"></div>
 <hr>
-    <h4>Withholding obligations </h4>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
   <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
-  
-<h4>Reporting obligations - T4 slip </h4>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
  <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
-  
+   </details>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
 <li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
@@ -464,7 +465,19 @@ Indian Act</h3>
   <div id="ajax-3yesb" class="alert alert-info hidden ">
               <h3><small>Your result </small><br>
                 Employee performs 50% or less of their employment duties on a reserve</h3>
-              <div data-ajax-replace="#ajax-resultperson2"></div>
+              <div data-ajax-replace="#ajax-prorate-income"></div>
+<hr>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
+  <div data-ajax-replace="#ajax-withhold-part-ex-emp"></div>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
+ <div data-ajax-replace="#ajax-t4-report-part-ex-emp"></div>
+   </details>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
             </div>
 
 
@@ -696,19 +709,18 @@ Indian Act</h3>
 
 <details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve</summary>
 <h4>Partly-exempt income</h4>
-<p>The status Indian individual's (status confirmed in step 1) income is partly-exempt from income tax under section 87 of the Indian Act if if the employee performs 50% or less of their employment duties on a reserve. The exemption may be prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption will apply only to the portion of the income related to the duties the employee performed on the reserve if <strong>all </strong>of the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
-<ul class="list-unstyled cnjnctn-type-or">
+ <div id="ajax-prorate-income">
+<p>The status First Nations's income is partly-exempt from income tax under section 87 of the Indian Act if if the employee performs 50% or less of their employment duties on a reserve. The exemption may be prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption will apply only to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
-</li>
-</ul>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 <h5>Examples</h5>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button"> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+ </div>
+
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 </details>
 
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
