--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -591,7 +591,7 @@ Indian Act</h3>
  <div id="ajax-how-prorate">
 <p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
-<ul class="list-unstyled cnjnctn-type-and">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
 <li class="cnjnctn-col">The extent to which the duty of employment was performed on a reserve</li>
 </ul>
