--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -328,16 +328,15 @@
                         <li>Worker does not live on a reserve and you (employer or payer) are resident on a reserve
                           <div class="wb-fieldflow-sub"  data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                             <div class="wb-fieldflow-header">
-                              <div class="brdr-tp gc-font-2019">
-                                <div data-ajax-replace="#ajax-nonres"></div>
+			<div class="brdr-tp">
+                                <p class="gc-font-2019 mrgn-tp-md">Where you are a resident on a reserve, you need to consider the percentage of the work performed by the worker of their employment duties on a reserve</p>
                               </div>
-                              <p class="wb-fieldflow-label">What is the situation of the employee?</p>
-                            </div>
-                            <ul>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Option 1</li>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Option 2 </li>
-                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>Option 3 </li>
-                            </ul>
+                               <p class="wb-fieldflow-label">What is the situation?</p>
+                               <p><a href="#how-prorate" aria-controls="how-prorate" class="overlay-lnk" role="button">How to determine the percentage of duties related to employment on a reserve&nbsp;<span class="far fa-question-circle"></span></a></p>
+                                                 <ul>
+                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Worker performs more than 50% of their employment duties on a reserve</li>
+                              <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Worker performs 50% or less of their employment duties on a reserve </li>
+                                                        </ul>
                           </div>
                         </li>
 		<li>Worker does not live on a reserve and you (employer or payer) are not resident on a reserve but the worker is required to 
@@ -464,7 +463,7 @@ Indian Act</h3>
 
   <div id="ajax-3yesb" class="alert alert-info hidden ">
               <h3><small>Your result </small><br>
-                Employee performs 50% or less of their employment duties on a reserve</h3>
+                Worker performs 50% or less of their employment duties on a reserve</h3>
               <div data-ajax-replace="#ajax-prorate-income"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
@@ -480,23 +479,43 @@ Indian Act</h3>
 </ul>
             </div>
 
+<div id="ajax-3nota" class="alert alert-info hidden">
+              <h3><small>Your result </small><br>
+                Worker performs more than 50% of their employment duties on a reserve</h3>
+	<div data-ajax-replace="#ajax-ex-emp"></div>
+<hr>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
+  <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
+ <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
+   </details>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
+            </div>
 
+  <div id="ajax-3notb" class="alert alert-info hidden ">
+              <h3><small>Your result </small><br>
+               Worker performs 50% or less of their employment duties on a reserve</h3>
+              <div data-ajax-replace="#ajax-prorate-income"></div>
+<hr>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
+  <div data-ajax-replace="#ajax-withhold-part-ex-emp"></div>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
+ <div data-ajax-replace="#ajax-t4-report-part-ex-emp"></div>
+   </details>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
+            </div>
            
-            <div id="ajax-3nota" class="alert alert-info hidden">
-              <h3><small>Your result </small><br>
-                Employee is a non-resident, including a commuter</h3>
-              <div data-ajax-replace="#ajax-resultnonres1"></div>
-            </div>
-            <div id="ajax-3notb" class="alert alert-warning hidden">
-              <h3><small>Your result </small><br>
-                Employee is part-year resident</h3>
-              <div data-ajax-replace="#ajax-resultnonres2"></div>
-            </div>
-            <div id="ajax-3notc" class="alert alert-info hidden">
-              <h3><small>Your result </small><br>
-                Employee is a deemed resident or sojourner</h3>
-              <div data-ajax-replace="#ajax-resultnonres3"></div>
-            </div>
+           
 
    <div id="ajax-4nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
@@ -716,7 +735,7 @@ Indian Act</h3>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
 </ul>
 <h5>Examples</h5>
-<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button"> <a href="#ajax-example1apro" aria-controls="centred-popup" class="wb-lbx" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
  </div>
 
