--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -336,6 +336,11 @@
                                                  <ul>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Worker performs more than 50% of their employment duties on a reserve</li>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Worker performs 50% or less of their employment duties on a reserve </li>
+			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>You are an Indian band that has a reserve, or a tribal council representing one or more Indian bands that have reserves. Your 
+employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
+			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notd", "live": true}'>You are an Indian organization controlled by one or more Indian bands that have reserves, or one or more tribal councils 
+representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the social, cultural, educational, or economic development of Indians who for the most part live on reserves. Your employee's duties of employment 
+are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>			 
                                                         </ul>
                           </div>
                         </li>
@@ -515,7 +520,44 @@ Indian Act</h3>
 </ul>
             </div>
            
-           
+    <div id="ajax-3notc" class="alert alert-info hidden">
+              <h3><small>Your result </small><br>
+                You are an Indian band that has a reserve, or a tribal council representing one or more Indian bands that have reserves. Your employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of 
+Indians who for the most part live on reserves</h3>
+	<div data-ajax-replace="#ajax-ex-emp"></div>
+<hr>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
+  <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
+ <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
+   </details>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
+            </div>       
+
+<div id="ajax-3notd" class="alert alert-info hidden">
+              <h3><small>Your result </small><br>
+                You are an Indian organization controlled by one or more Indian bands that have reserves, or one or more tribal councils representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the social, cultural, 
+educational, or economic development of Indians who for the most part live on reserves. Your employee's duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on 
+reserves</h3>
+	<div data-ajax-replace="#ajax-ex-emp"></div>
+<hr>
+<h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
+ <details><summary>Withholding obligations </summary>
+  <div data-ajax-replace="#ajax-withhold-ex-emp"></div>
+ </details>
+<details><summary>Reporting obligations - T4 slip</summary>
+ <div data-ajax-replace="#ajax-t4-report-ex-emp"></div>
+   </details>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howcalc"></div>  </li>
+<li class="cnjnctn-col"><div data-ajax-replace="#ajax-howreport"></div>    </li>
+</ul>
+            </div>
 
    <div id="ajax-4nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
