--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -333,7 +333,8 @@
                               </div>
                                <p class="wb-fieldflow-label">What is the situation?</p>
                                <p><a href="#how-prorate" aria-controls="how-prorate" class="overlay-lnk" role="button">How to determine the percentage of duties related to employment on a reserve&nbsp;<span class="far fa-question-circle"></span></a></p>
-                                                 <ul>
+                                 </div>             
+				  <ul>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3nota", "live": true}'>Worker performs more than 50% of their employment duties on a reserve</li>
                               <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notb", "live": true}'>Worker performs 50% or less of their employment duties on a reserve </li>
 			      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3notc", "live": true}'>You are an Indian band that has a reserve, or a tribal council representing one or more Indian bands that have reserves. Your 
@@ -1194,7 +1195,7 @@ reserves</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1b"></div>
 	</div></section>
 
-<section id="ajax-example1apro" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><h2 class="modal-title">Guideline 1 - Proration rule - Examples where exempt</h2>
+<section id="ajax-example1apro" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Guideline 1 - Proration rule - Examples where exempt</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example1apro"></div>
 	</div></section>
