--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -451,7 +451,7 @@ Indian Act</h3>
   <div id="ajax-3yesa" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Worker performs more than 50% of their employment duties on a reserve</h3>
-	<div data-ajax-replace="#ajax-ex-emp"></div>
+	<div data-ajax-replace="#ajax-income-50"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
  <details><summary>Withholding obligations </summary>
@@ -487,7 +487,7 @@ Indian Act</h3>
 <div id="ajax-3nota" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                 Worker performs more than 50% of their employment duties on a reserve</h3>
-	<div data-ajax-replace="#ajax-ex-emp"></div>
+	<div data-ajax-replace="#ajax-income-50"></div>
 <hr>
 <h4 class="mrgn-tp-md">Withholding and reporting obligations</h4>
  <details><summary>Withholding obligations </summary>
