--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -621,7 +621,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
  <div id="ajax-ex-emp">
-<p>The First Nations worker's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
@@ -750,7 +750,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee performs <strong>more than 50%</strong> of their employment duties on a reserve</summary>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-50">
-<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
 <ul class="list-unstyled cnjnctn-type-or">
@@ -771,7 +771,7 @@ Indian Act</h3>
 <details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve</summary>
 <h4>Partly-exempt income</h4>
  <div id="ajax-prorate-income">
-<p>The status First Nations's income is partly-exempt from income tax under section 87 of the Indian Act if if the employee performs 50% or less of their employment duties on a reserve. The exemption may be prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption will apply only to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
+<p>The income is partly-exempt from income tax under section 87 of the Indian Act if if the employee performs 50% or less of their employment duties on a reserve. The exemption may be prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption will apply only to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
@@ -787,13 +787,13 @@ Indian Act</h3>
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
 <h3>Exempt income situation</h3>
 <div id="ajax-income-indianband">
-<p>The status Indian individual's income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
+<p>The income is exempt from income tax under section 87 of the Indian Act if the employer is <strong>all </strong>of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer is one of the following:
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">An Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves  </li>
-<li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="centred-popup" class="wb-lbx" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of Indians who for the most part live on reserves </li>
+<li class="cnjnctn-col">An Indian organization controlled by an Indian band which has a reserve, or a tribal council representing one or more Indian bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of Indians who for the most part live on reserves </li>
 </ul>
 </li>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves </li>
