--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -557,7 +557,7 @@ Indian Act</h3>
             </div>
 
 
-            <div id="ajax-4notb" class="alert alert-warning hidden">
+            <div id="ajax-4notb" class="alert alert-info hidden">
               <h3><small>Your result </small><br>
                Worker performs less than 90% of their employment duties on a reserve</h3>
                  <div data-ajax-replace="#ajax-income-90-not"></div>
@@ -622,10 +622,9 @@ Indian Act</h3>
 <h4>Exempt income situation</h4>
  <div id="ajax-ex-emp">
 <p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
-
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 <h5>Examples</h5>
 <p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
@@ -633,7 +632,7 @@ Indian Act</h3>
 </div>
 
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
+
 
 </details>
 
@@ -753,7 +752,7 @@ Indian Act</h3>
 <p>The income is exempt from income tax under section 87 of the Indian Act if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employer <strong>or </strong>the employee is in one of the following situations:
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
@@ -764,7 +763,6 @@ Indian Act</h3>
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 </div>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
 
 </details>
 
@@ -781,7 +779,6 @@ Indian Act</h3>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
  </div>
 
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
 </details>
 
 <details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
@@ -802,7 +799,7 @@ Indian Act</h3>
 <h5>Examples</h5>
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
+
 
 </details>
 </li>
@@ -817,7 +814,7 @@ Indian Act</h3>
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 </div>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> exempt income</strong> in this situation, continue to: <a href="#ex">Step 4a: Withhold payroll deductions and remit GST/HST</a>.</p>
+
 
 </details>
 
@@ -830,7 +827,7 @@ Indian Act</h3>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </div>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> To find out what payroll deductions you have to withhold on <strong> partly-exempt income</strong> in this situation, continue to: <a href="#partex">Step 4b: Withhold payroll deductions and remit GST/HST</a>.</p>
+
 
 </details>
 
